GitHub pages setup

--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@
   </head>
   <body>
     <script src='bundle.js'></script>
-  </body>
+  <script type="text/javascript" src="app.074d26fcf2add40e184f.js"></script></body>
 </html>
